--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@nestjs/cli": "^10.2.1",
 		"@nestjs/common": "^10.2.8",
 		"@nestjs/config": "^3.1.1",
 		"@nestjs/core": "^10.2.8",
-		"@nestjs/cli": "^10.2.1",
 		"@nestjs/platform-express": "^10.2.8",
 		"@nestjs/schedule": "^4.0.1",
 		"@nestjs/swagger": "^7.3.0",
@@ -31,6 +31,7 @@
 		"axios": "^1.6.2",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
+		"cloudinary": "^2.6.0",
 		"dotenv": "^16.3.1",
 		"firebase-admin": "^11.11.1",
 		"openai": "^4.25.0",
@@ -45,6 +46,7 @@
 		"@types/express": "^4.17.21",
 		"@types/fs-extra": "^11.0.4",
 		"@types/jest": "^29.5.8",
+		"@types/multer": "^1.4.12",
 		"@types/node": "^20.9.0",
 		"@types/supertest": "^2.0.16",
 		"@types/uuid": "^9.0.7",
