--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@azure/storage-blob": "^12.27.0",
+		"@google-cloud/text-to-speech": "^6.0.1",
+		"@nestjs/axios": "^4.0.0",
 		"@nestjs/cli": "^10.2.1",
 		"@nestjs/common": "^10.2.8",
 		"@nestjs/config": "^3.1.1",
